--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: swift
 os: osx
 osx_image: xcode10.1
+before_install:
+  - pod repo update
 script:
   - bundle install
   - bundle exec pod repo update
