Update public interface and add Backtrace client configuration settings. (#9)
* Add mocks for unit testing.
* Add Backtrace client configuration settings.
* Update public interface.

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -39,15 +39,17 @@ file_length:
 # naming rules can set warnings/errors for min_length and max_length
 # additionally they can set excluded names
 type_name:
-  min_length: 2 # only warning
+  min_length: 4 # only warning
   max_length: # warning and error
     warning: 40
     error: 50
   excluded: iPhone # excluded via string
 identifier_name:
   min_length: # only min_length
+    warning: 4
     error: 2 # only error
   excluded: # excluded via string array
+    - ok
     - id
     - URL
     - GlobalAPIKey
