--- a/Example-macOS-ObjC/Info.plist
+++ b/Example-macOS-ObjC/Info.plist
@@ -24,7 +24,7 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
-	<key>NSPrincipalClass</key>
-	<string>NSApplication</string>
+    <key>NSPrincipalClass</key>
+    <string>Backtrace.BacktraceCrashExceptionApplication</string>
 </dict>
 </plist>
