--- a/Backtrace.xcodeproj/xcshareddata/xcschemes/Backtrace-iOS.xcscheme
+++ b/Backtrace.xcodeproj/xcshareddata/xcschemes/Backtrace-iOS.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "F2C2FA4F21BBD26300934744"
+            BuildableName = "Backtrace.framework"
+            BlueprintName = "Backtrace-iOS"
+            ReferencedContainer = "container:Backtrace.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
