--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -11,6 +11,7 @@ opt_in_rules: # some rules are only opt-in
   # swiftlint rules
 included: # paths to include during linting. `--path` is ignored if present.
   - Sources
+  - Tests
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
