Revert "Update CI config"
This reverts commit dd09688193926cc7911d691ad3a7e6acd61bab0c.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: swift
 os: osx
 osx_image: xcode10.2
 before_install:
-  - bundle install
+  - pod repo update
 script:
+  - bundle install
   - bundle exec pod repo update
   - bundle exec pod update
   - bundle exec fastlane ios tests
