--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ osx_image: xcode10.2
 script:
   - bundle install
   - bundle exec pod repo update
-  - bundle exec pod update
+  - bundle exec pod install
   - bundle exec fastlane ios tests
   - bundle exec fastlane mac tests
   - bundle exec fastlane tvos tests
