--- a/Backtrace.xcodeproj/xcshareddata/xcschemes/Backtrace-iOS.xcscheme
+++ b/Backtrace.xcodeproj/xcshareddata/xcschemes/Backtrace-iOS.xcscheme
@@ -20,15 +20,38 @@
                ReferencedContainer = "container:Backtrace.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F2C2FA5821BBD26300934744"
+               BuildableName = "Backtrace-iOSTests.xctest"
+               BlueprintName = "Backtrace-iOSTests"
+               ReferencedContainer = "container:Backtrace.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "YES"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "F2C2FA4F21BBD26300934744"
+            BuildableName = "Backtrace.framework"
+            BlueprintName = "Backtrace-iOS"
+            ReferencedContainer = "container:Backtrace.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <CodeCoverageTargets>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -50,17 +73,6 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F2C2FA4F21BBD26300934744"
-            BuildableName = "Backtrace.framework"
-            BlueprintName = "Backtrace-iOS"
-            ReferencedContainer = "container:Backtrace.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -81,8 +93,6 @@
             ReferencedContainer = "container:Backtrace.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
