Always perform bundle update

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: swift
 os: osx
 osx_image: xcode10.2
 before_install:
-  - bundle install
+  - bundle update
   - bundle exec pod repo update
   - bundle exec pod update
 script:
