Support submission URL (#30)
* Update dependencies
* Fix typos
* Refactor API to allow submission URLs
* Update README.md
* Bump version
* Fix project settings for Xcode 11
* Disable retrieving info about Bluetooth. Accessing Bluetooth on iOS 13 requires NSBluetoothAlwaysUsageDescription key to be provided

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: swift
 os: osx
 osx_image: xcode10.2
 before_install:
-  - bundle install
+  - gem install bundler:2.0.2
+  - bundler install
+  - bundle update
   - bundle exec pod repo update
   - bundle exec pod update
 script:
