--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: swift
 os: osx
-osx_image: xcode10.2
+osx_image: xcode11.2
 before_install:
-  - gem install bundler:2.0.2
   - bundler install
-  - bundle update
+  - bundle install
   - bundle exec pod repo update
-  - bundle exec pod update
+  - bundle exec pod install
 script:
   - bundle exec fastlane ios tests
   - bundle exec fastlane mac tests
