--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: osx
 osx_image: xcode11.2
 before_install:
   - bundler install
-  - bundle install
+  - bundle update
   - bundle exec pod repo update
   - bundle exec pod install
 script:
