--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 language: swift
 os: osx
 osx_image: xcode11.2
-before_install:
-  - bundler install
-  - bundle update
-  - bundle exec pod repo update
-  - bundle exec pod install
 script:
-  - bundle exec fastlane ios tests
-  - bundle exec fastlane mac tests
+  - sh scripts/install.sh
+  - sh scripts/test.sh
