--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,36 +1,17 @@
 name: Run tests
 
-on: 
-  workflow_dispatch:
+on:
   pull_request:
     branches: 
       - develop
       - master
 
 jobs:
-
-  test:
+  build:
     runs-on: macos-latest
-    
-    strategy:
-      matrix:
-          platform: [ios, mac, tvos]
-
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: sh scripts/install.sh
-      - name: Run test
-        run: fastlane ${{ matrix.platform }} tests
-    
-  pod-lint:
-    runs-on: macos-latest
-    needs: test
-    
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: sh scripts/install.sh
-      - name: Run pod lib lint
-        run: pod lib lint --verbose --allow-warnings --sources='https://cdn.cocoapods.org/'
-  
+      - name: Run tests
+        run: sh scripts/test.sh
