--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Brew bundle if needed (ignore errors)
-        run: brew bundle check --no-upgrade || brew bundle || true
-      - name: Pod install 
-        run: pod install
+      - name: Install dependencies
+        run: sh scripts/install.sh
       - name: Run test
         run: fastlane ${{ matrix.platform }} tests
     
