--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     branches: 
-      - develop
+      - release
       - master
   schedule:
     - cron:  '0 0 * * *'
