Update backtrace-cocoa swift package manager
Build swift module
De-integrate CocoaPods
Resolve dependencies paths
Add missing swift imports
Add iOS platform support
Fix Backtrace-iOSTests

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Backtrace.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Backtrace.xcscheme
@@ -48,6 +48,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Backtrace_Backtrace-iOSTests"
+               BuildableName = "Backtrace_Backtrace-iOSTests"
+               BlueprintName = "Backtrace_Backtrace-iOSTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
