--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: sh scripts/install.sh
+      - name: Run pod lib lint
+        run: pod lib lint --verbose --allow-warnings --sources='https://cdn.cocoapods.org/'
