--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,26 @@ jobs:
       - name: Install dependencies
         run: sh scripts/install.sh
       - name: Run pod lib lint
-        run: pod lib lint --verbose --allow-warnings --sources='https://cdn.cocoapods.org/'
+        run: pod lib lint --verbose --allow-warnings --sources='https://cdn.cocoapods.org/' 
   # END COPY PASTE FROM TEST.YML
-
- build-dynamic-frameworks:
+  
+  deploy-cocoapods:
     runs-on: macos-latest
     needs: [pod-lint, test]
+    
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: sh scripts/install.sh
+      - name: Deploy to Cocoapods
+        run: sh scripts/deploy.sh
+        env:
+         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
 
+  build-dynamic-frameworks:
+    runs-on: macos-latest
+    needs: [pod-lint, test]
+    
     strategy:
       matrix:
           ENABLE_BITCODE: [YES, NO]
@@ -48,7 +61,7 @@ jobs:
 
     - name: Install cocoapods and rome
       run: gem install cocoapods cocoapods-rome
-
+      
     - name: Run pod install with Podfile from workflows directory
       run: cp .github/workflows/Podfile . && pod install
       env:
@@ -63,7 +76,7 @@ jobs:
       with:
         name: Archive_DynamicFramework_iOS_Bitcode${{ matrix.ENABLE_BITCODE }}_SwiftEmbedded${{ matrix.SWIFT_EMBEDDED }}_${{ github.ref_name }}
         path: Archive_DynamicFramework_iOS_Bitcode${{ matrix.ENABLE_BITCODE }}_SwiftEmbedded${{ matrix.SWIFT_EMBEDDED }}_${{ github.ref_name }}.tar.gz
-
+        
   upload-to-github-release:
     runs-on: ubuntu-latest
     needs: build-dynamic-frameworks
