--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           platform: [ios, mac, tvos]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install dependencies
         run: sh scripts/install.sh
       - name: Run test
@@ -26,15 +26,29 @@ jobs:
     runs-on: macos-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install dependencies
         run: sh scripts/install.sh
       - name: Run pod lib lint
         run: pod lib lint --verbose --allow-warnings --sources='https://cdn.cocoapods.org/' 
   # END COPY PASTE FROM TEST.YML
 
-  build_with_signing:
+  deploy-cocoapods:
     runs-on: macos-latest
+    needs: [pod-lint, test]
+    
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: sh scripts/install.sh
+      - name: Deploy to Cocoapods
+        run: sh scripts/deploy.sh
+        env:
+         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
+
+  sign-and-build-frameworks:
+    runs-on: macos-latest
+    needs: [pod-lint, test]
 
     steps:
       - name: Checkout repository
@@ -68,48 +82,28 @@ jobs:
           # apply provisioning profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-  
-  deploy-cocoapods:
-    runs-on: macos-latest
-    needs: [pod-lint, test]
-    
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: sh scripts/install.sh
-      - name: Deploy to Cocoapods
-        run: sh scripts/deploy.sh
+
+      - name: Build frameworks
+        run: sh scripts/xcframeworkgen.sh
         env:
-         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
+          BACKTRACE_VERSION: ${{ github.ref_name }}
 
-  build-dynamic-frameworks:
-    runs-on: macos-latest
-    needs: [pod-lint, test]
+      - name: Tar files to preserve file permissions
+        run: tar -cvzf Archive_XCFrameworks_${{ github.ref_name }}.tar.gz frameworks/
 
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Build frameworks
-      run: sh scripts/xcframeworkgen.sh
-      env:
-        BACKTRACE_VERSION: ${{ github.ref_name }}
-
-    - name: Tar files to preserve file permissions
-      run: tar -cvzf Archive_XCFrameworks_${{ github.ref_name }}.tar.gz frameworks/
-
-    - uses: actions/upload-artifact@v3
-      with:
-        name: Archive_XCFrameworks_${{ github.ref_name }}
-        path: Archive_XCFrameworks_${{ github.ref_name }}.tar.gz
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Archive_XCFrameworks_${{ github.ref_name }}
+          path: Archive_XCFrameworks_${{ github.ref_name }}.tar.gz    
         
-  upload-to-github-release:
+  upload-xcframeworks:
     runs-on: ubuntu-latest
-    needs: build-dynamic-frameworks
+    needs: sign-and-build-frameworks
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         id: download
         with:
           path: artifacts/
