--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,7 +110,7 @@ jobs:
         env:
           DISTRIBUTION_IDENTITY: ${{ secrets.DISTRIBUTION_IDENTITY }}
         run:
-          codesign --force --timestamp --deep --sign "$DISTRIBUTION_IDENTITY" Backtrace.xcframework 
+          codesign --force --timestamp --deep --sign "$DISTRIBUTION_IDENTITY" frameworks/Backtrace.xcframework 
 
       - name: Tar files to preserve file permissions
         run: tar -cvzf Archive_XCFrameworks_${{ github.ref_name }}.tar.gz frameworks/
