--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,9 +109,9 @@ jobs:
       - name: Codesign frameworks
         env:
           DISTRIBUTION_IDENTITY: ${{ secrets.DISTRIBUTION_IDENTITY }}
-        run:
-          codesign --force --timestamp --deep --sign "$DISTRIBUTION_IDENTITY" frameworks/Backtrace.xcframework
-          codesign --force --timestamp --deep --sign "$DISTRIBUTION_IDENTITY" frameworks/PLCrashReporter/CrashReporter.xcframework  
+        run: |
+          codesign --force --timestamp --sign "$DISTRIBUTION_IDENTITY" frameworks/Backtrace.xcframework
+          codesign --force --timestamp --sign "$DISTRIBUTION_IDENTITY" frameworks/PLCrashReporter/CrashReporter.xcframework  
 
       - name: Tar files to preserve file permissions
         run: tar -cvzf Archive_XCFrameworks_${{ github.ref_name }}.tar.gz frameworks/
